glx/testdata/invalid/missing-required-fields/events/event-missing-type.glx
events:
  event-missing-type:
    date: "1850-01-15"


